--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,21 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.Light.DarkActionBar">
+
+        <service
+            android:name=".BackgroundMusicService"
+            android:enabled="true"
+            android:exported="true">
+        </service>
+
         <activity
             android:name=".GameActivity"
+            android:exported="false" />
+        <activity
+            android:name=".OptionActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ScoreActivity"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
